--- a/Memoria/abstract.tex
+++ b/Memoria/abstract.tex
@@ -3,10 +3,12 @@
 
 	Nowadays the world of ecommerce is living its own golden age. Companies such as Amazon are reporting net incomes around the 100.000 million dollar value in online sales, with 300 million customers around the globe.\\
 
-	One of the gaps of these online platforms is the inability to allow customers to save information of a product they're interested in, in order to subsequently consult it. Currently and generally speaking, once the details of a product have been printed or saved in a document in PDF format, for instance, the information is not rendered in the most arranged way. This is normally due to the platform administrator lacking an easy means to modify how the appearance of the information will be stored, and this results in them having a dependancy on programming experts in order to provide more user friendly layouts.\\
+	One of the gaps of these online platforms is the inability to allow customers to save information of a product they're interested in, in order to subsequently consult it. Currently and generally speaking, once the details of a product have been printed or saved in a document in PDF format, for instance, the information is not rendered in the most arranged way as frequently, irrelevant HTML elements that have little to do with the product are displayed in between. This is normally due to the platform administrator lacking an easy means to modify how the appearance of the information will be stored, and this results in them having a dependancy on programming experts in order to provide more user friendly layouts. \\
+	As a side note, some online vendors are also able to reach out to customers through physical stores, and a challenge they often face is the ability to generate an up-to-date PDF of their complete catalog in order to enhance and level up the shopping experience of all types of their clientele.\\
 
-	As a way to mend this handicap and enhance users' experience while shopping online, the objective of this project is to develop an independant module that can easily be plugged into an ecommerce platform and allow its administrators the possibility of designing templates for the rendering of their catalog. With this functionality, users may be able to easily save the details of a product and later be able to examine it.
+	As a way to mend this handicap and enhance users' experience while shopping online, the objective of this project is to develop an independant module that can easily be plugged into an ecommerce platform and allow its administrators the possibility of designing templates for the rendering of their catalog. With this functionality, users may be able to easily save the details of a product and later be able to examine it.\\
+	For the development of this End of Master's Project, Drupal platform and its extension for ecommerce Ubercart have been leveraged.
 
-\vspace{2cm}
+\vspace{1cm}
 {\textcolor{blue}{\large\bf KEYWORDS}}\\
-E-commerce, PDF, Module, Template
+E-commerce, PDF, Module, Drupal, Catalog, Product
