--- a/Memoria/acronimos.tex
+++ b/Memoria/acronimos.tex
@@ -1,15 +1,15 @@
-\chapter{Lista de acrónimos}
+\chapter*{Lista de acrónimos}
 \acrodef{TFM}{Trabajo Fin de Máster}
 \textbf{TFM:} Trabajo Fin de Máster
 
 \acrodef{CMS}{Content Management System}
 \textbf{CMS:} Content Management System
 
-\acrodef{LAMP}{Linux, Apache, MySQL/MariaDB, Perl, PHP, Python}
-\textbf{LAMP:} Linux, Apache, MySQL/MariaDB, Perl, PHP, Python
+\acrodef{LAMP}{Linux, Apache, MySQL, PHP}
+\textbf{LAMP:} Linux, Apache, MySQL, PHP
 
-\acrodef{WAMP}{Windows, Apache, MySQL/MariaDB, Perl, PHP, Python}
-\textbf{WAMP:} Windows, Apache, MySQL/MariaDB, Perl, PHP, Python
+\acrodef{WAMP}{Windows, Apache, MySQL, PHP}
+\textbf{WAMP:} Windows, Apache, MySQL, PHP
 
 \acrodef{HTML}{Hypertext Markup Language}
 \textbf{HTML:} HyperText Markup Language
