--- a/Memoria/librero.bib
+++ b/Memoria/librero.bib
@@ -1,42 +1,173 @@
-@Article{NewCam97,
-  author    = {Isaac Newton and Naomi Campbell},
-  title     = {A Re-formulation of Gravity with
-               Respect to Really Cool Models},
-  journal   = {Jornal of Funny Physics},
-  pages     = {39--78},
-  volume    = {35},
-  year      = {1997}
+@Article{Dav16,
+  author    = {David Villafranca},
+  title     = {\textit{Amazon volvió en 2015 a los beneficios y superó los 100.000 millones en venta}s},
+  year      = {2016},
+  note      = {\url{https://www.efe.com/efe/espana/economia/amazon-volvio-en-2015-a-los-beneficios-y-supero-100-000-millones-ventas/10003-2824141}}
 }
 
-@Article{SakIno98,
-  author    = {Ch. Sakama and K. Inoue},
-  title     = {Negation as Failure in the Head},
-  year      = {1998},
-  journal   = {Journal of Logic Programming},
-  volume    = {35(1)},
-  pages     = {39--78}
+@Article{htmlTags,
+	author    = {World Wide Web Consortium},
+	title     = {\textit{First mention of HTML Tags on the www-talk mailing list}},
+	year      = {1991},
+	note      = {\url{http://lists.w3.org/Archives/Public/www-talk/1991SepOct/0003.html}}
 }
 
-@Book{Pesce,
-  author    = {Mark D. Pesce},
-  title     = {Programming Microsoft DirectShow for digital video and television},
-  publisher = {Microsoft Press},
-  year      = {2003}
+@Book{Hak94,
+	author    = {Håkon Wium Lie},
+	title     = {\textit{Cascading HTML style sheets - a proposal}},
+	year      = {1994},
 }
 
-@InProceedings{Jan01,
-  author    = {Tomi Janhuenen},
-  title     = {On the Effect of Default Negation on the Expressiveness
-               of Disjunctive Rules},
-  booktitle = {Proceedings LPNMR},
-  pages     = {93--106},
-  year      = {2001}
+@Article{W3cCSS,
+	author    = {World Wide Web Consortium},
+	title     = {\textit{Cascading Style Sheets, level 1}},
+	year      = {1996},
+	note      = {\url{https://www.w3.org/TR/1999/REC-CSS1-19990111}}
 }
 
-@Unpublished{Nav03,
-  author    = {Navarro P{\'e}rez, Juan Antonio},
-  title     = {Formato de Tesis para la {UDLA}.
-               {G}u\'{\i}a de Usuario y Manual de Referencia},
-  year      = {2003},
-  note      = {\url{http://www.udlap.mx/~ma108907/latex}}
+@Article{Bert94,
+	author    = {Bert Bros},
+	title     = {\textit{CSS software}},
+	year      = {1994-2017},
+	note      = {\url{https://www.w3.org/Style/CSS/software.en.html#w26}}
+}
+
+@Article{News95,
+	author    = {Newswire},
+	title     = {\textit{Netscape and Sun announce JavaScript}},
+	year      = {1995},
+	note      = {\url{https://web.archive.org/web/20070916144913/http://wp.netscape.com/newsref/pr/newsrelease67.html}}
+}
+
+@Article{Marc08,
+	author    = {Marc Andersen},
+	title     = {\textit{TechVision: Innovators of the Net: Brendan Eich and JavaScript}},
+	year      = {2008},
+	note      = {\url{https://web.archive.org/web/20080208124612/http://wp.netscape.com/comprod/columns/techvision/innovators_be.html}}
+}
+
+@Article{Ras07,
+	author    = {Rasmus Lerdorf},
+	title     = {\textit{PHP on Hormones}},
+	year      = {2007},
+	note      = {\url{2009-06-22.http://web.archive.org/web/20130729204354id_/http://itc.conversationsnetwork.org/shows/detail3298.html}}
+}
+
+@Article{Ras03,
+	author    = {Rasmus Lerdorf},
+	title     = {\textit{PHP, Behind the Mic}},
+	year      = {2003},
+	note      = {\url{https://web.archive.org/web/20130728125152/http://itc.conversationsnetwork.org/shows/detail58.html}}
+}
+
+@Article{PHP17,
+	author    = {PHP},
+	title     = {\textit{Preparation Tasks}},
+	year      = {2017},
+	note      = {\url{https://wiki.php.net/todo/php72}}
+}
+
+@Article{Mag11,
+	author    = {Magnus Holm},
+	title     = {\textit{JSON: The JavaScript subset that isn't}},
+	year      = {2011},
+	note      = {\url{http://timelessrepo.com/json-isnt-a-javascript-subset}}
+}
+
+@Article{W3t17,
+	author    = {W3Techs},
+	title     = {\textit{Usage of content management systems for websites}},
+	year      = {2017},
+	note      = {\url{https://w3techs.com/technologies/overview/content_management/all}}
+}
+
+@Book{Ben11,
+	author    = {Benjamin Melançon},
+	title     = {\textit{The Definitive Guide to Drupal 7}},
+	year      = {2011},
+	note      = {p. 823. ISBN 9781430231356}
+}
+
+@Article{Misk09,
+	author    = {Mi?ko Hever},
+	title     = {\textit{Hello World, <angular/> is here}},
+	year      = {2009},
+	note      = {\url{http://misko.hevery.com/2009/09/28/hello-world-angular-is-here/}}
+}
+
+@Article{W3tJquery17,
+	author    = {W3Techs},
+	title     = {\textit{Usage of JavaScript libraries for websites}},
+	year      = {2017},
+	note      = {\url{https://w3techs.com/technologies/overview/javascript_library/all}}
+}
+
+@Article{Joh07,
+	author    = {John resig},
+	title     = {\textit{jQuery: past, present and future}},
+	year      = {2007},
+	note      = {\url{https://www.slideshare.net/jeresig/history-of-jquery}}
+}
+
+@Article{Net16,
+	author    = {Netcraft},
+	title     = {\textit{July 2016 Web Server Survey}},
+	year      = {2016},
+	note      = {\url{https://web.archive.org/web/20160810054429/http://news.netcraft.com/archives/2016/07/19/july-2016-web-server-survey.html}}
+}
+
+@Article{Bob09,
+	author    = {Bob Remeika},
+	title     = {\textit{Five Questions With Michael Widenius ? Founder And Original Developer of MySQL}},
+	year      = {2009},
+	note      = {\url{https://web.archive.org/web/20090313160628/http://www.opensourcereleasefeed.com/interview/show/five-questions-with-michael-widenius-founder-and-original-developer-of-mysql}}
+}
+
+@Article{Mon09,
+	author    = {Monty Widenius},
+	title     = {\textit{MariaDB versus MySQL ? Compatibility}},
+	year      = {2010},
+	note      = {\url{https://mariadb.com/about-us/wiki/MariaDB_versus_MySQL}}
+}
+
+@Article{Git14,
+	author    = {Git},
+	title     = {\textit{A Short History of Git}},
+	year      = {2014},
+	note      = {\url{https://git-scm.com/book/en/v2/Getting-Started-A-Short-History-of-Git}}
+}
+
+@Article{Seg15,
+	author    = {Segue Technologies},
+	title     = {\textit{The Benefits of Adhering to Software Development Methodology Concepts}},
+	year      = {2015},
+	note      = {\url{http://www.seguetech.com/benefits-adhering-software-development-methodology-concepts/}}
+}
+
+@Article{Tak86,
+	author    = {Takeuchi, Hirotaka; Nonaka, Ikujiro},
+	title     = {\textit{New New Product Development Game}},
+	year      = {1986},
+	note      = {\url{https://cb.hbsp.harvard.edu/cbmp/product/86116-PDF-ENG}}
+}
+
+@Article{Jef04,
+	author    = {Jeffrey Sutherland},
+	title     = {\textit{Agile Development: Lessons learned from the first Scrum}},
+	year      = {2004},
+	note      = {\url{https://www.scrumalliance.org/resources/35}}
+}
+
+@Book{Jef95,
+	author    = {Jeffrey Sutherland, Ken Schwaber},
+	title     = {\textit{Business object design and implementation: OOPSLA '95 workshop proceedings}},
+	year      = {1995},
+	note      = {p. 118. ISBN 3-540-76096-2}
+}
+
+@Article{Jef16,
+	author    = {Jeffrey Sutherland, Ken Schwabe},
+	title     = {\textit{The Scrum Guide}},
+	year      = {2016},
+	note      = {\url{http://www.scrumguides.org/docs/scrumguide/v2016/2016-Scrum-Guide-US.pdf}}
 }
