--- a/Memoria/metodologia.tex
+++ b/Memoria/metodologia.tex
@@ -16,7 +16,7 @@ Algunas de las ventajas de implantar una metodología bien definida son las sigui
 
 Cuando una metodología no se implementa correctamente, pueden surgir numerosos problemas. Por ejemplo, una pérdida de comunicación entre el cliente y el equipo de desarrollo lleva a desarrollar sistemas que no cumplen las expectativas del cliente. Además el mal uso de conceptos o procesos de una metodología de desarrollo conduce a menudo a desarrollar sistemas con numerosos defectos.\\
 
-Por otro lado, la calidad de vida del equipo humano también se ve afectada por la falta de uso de metodologías. Muchos desarrolladores sufren de falta de moral y motivación a causa de los continuos cambios de alcance o parches debidos a la falta de definición en las tareas. Por el contrario, usando los procesos de desarrollo adecuados, se puede gestionar debidamente el alcance de un proyecto y evitar muchos problemas comunes de desarrollo \textit{software}. Siempre ocurrirán imprevistos, pero con una metodología adecuada, estos son de poco impacto y mínima ocurrencia.\\
+Por otro lado, la calidad de vida del equipo humano también se ve afectada por la falta de uso de metodologías. Muchos desarrolladores sufren de falta de moral y motivación a causa de los continuos cambios de alcance o parches debidos a la falta de definición en las tareas.\cite{Seg15} Por el contrario, usando los procesos de desarrollo adecuados, se puede gestionar debidamente el alcance de un proyecto y evitar muchos problemas comunes de desarrollo \textit{software}. Siempre ocurrirán imprevistos, pero con una metodología adecuada, estos son de poco impacto y mínima ocurrencia.\\
 
 No todas la metodologías de desarrollo funcionan con todos los proyectos. Elegir la adecuada también es uno de los retos que tienen que afrontar los desarrolladores. Algunas metodologías funcionan mejor con proyectos grandes y de larga duración, y otras son más adecuadas para proyectos medianos y pequeños con equipos de desarrollo más modestos. Sin embargo es un hecho que, aplicar una metodología de desarrollo a un proyecto, aumenta mucho las posibilidades de que termine con éxito.
 
@@ -72,9 +72,9 @@ Scrum es una metodología ágil, iterativa e incremental. Aunque fue creada por em
 En Scrum participa un equipo de trabajo multidisciplinar y autoorganizado que debe actuar como una unidad para alcanzar un objetivo común manteniendo una colaboración activa tanto de forma presencial como \textit{online}.\\
 Uno de los puntos clave de Scrum es la asunción de que el cliente cambiará de opinión sobre lo que quiere o necesita y que se presentarán retos impredecibles para los cuales una planificación previa no son suficientes. De este modo, la metodología implica que el problema no puede entenderse en su totalidad o ser totalmente definido previamente, de manera que se enfoca en maximizar la capacidad del equipo de realizar entregas rápidas y la adaptabilidad a nuevos requisitos y cambios, tanto del cliente como el mercado.\\
 
-Scrum es relativamente reciente. En 1986 Hirotaka Takeuchi e Ikujiro Nonaka presentaron el artículo "New New Product Development Game" para la Harvard Business Review centrándose en la innovación continua, icremental y en espiral. Los autores describían una nueva aproximación al desarrollo comercial de productos, que llamaron la "Aproximación rugby", ya que todo el proceso es llevado a cabo por un equipo multifuncional a través de fases solapadas en dónde el equipo "intenta avanzar como una unidad pasándose el balón hacia atrás y hacia delante".\\
-En 1993 Ken Schwaber y Jeff Sutherland usaron, por primera vez, en sus empresas la aproximación propuesta por Hirotaka e Ikujiro, refiriéndose a ella como Scrum. En 1995 Schwaber y Sutherland, presentaron su artículo "The SCRUM Development Process" en la conferencia OOPSLA (Texas), popularizando de este modo el término y abriendo nuevos horizontes a la expansión de la metodología.
-Más tarde, en el año 2001, Schwaber trabajó con Mike Beedle para describir el método Scrum en el libro "Agile Software Development with Scrum" y en el año 2002 fundó junto con otros miembros, la Scrum Alliance, iniciando con ello las series de certificación en Scrum.
+Scrum es relativamente reciente. En 1986 Hirotaka Takeuchi e Ikujiro Nonaka presentaron el artículo ``New New Product Development Game'' para la Harvard Business Review centrándose en la innovación continua, icremental y en espiral\cite{Tak86}. Los autores describían una nueva aproximación al desarrollo comercial de productos, que llamaron la ``Aproximación rugby'', ya que todo el proceso es llevado a cabo por un equipo multifuncional a través de fases solapadas en dónde el equipo ``intenta avanzar como una unidad pasándose el balón hacia atrás y hacia delante''.\\
+En 1993 Ken Schwaber y Jeff Sutherland usaron, por primera vez, en sus empresas la aproximación propuesta por Hirotaka e Ikujiro, refiriéndose a ella como Scrum\cite{Jef04}. En 1995 Schwaber y Sutherland, presentaron su artículo ``The SCRUM Development Process'' en la conferencia OOPSLA (Texas), popularizando de este modo el término y abriendo nuevos horizontes a la expansión de la metodología.\cite{Jef95}
+Más tarde, en el año 2001, Schwaber trabajó con Mike Beedle para describir el método Scrum en el libro ``Agile Software Development with Scrum'' y en el año 2002 fundó junto con otros miembros, la Scrum Alliance, iniciando con ello las series de certificación en Scrum.\cite{Jef16}
 
 Las principales características de Scrum son las siguientes:
 \begin{itemize}  
