--- a/Memoria/objetivo.tex
+++ b/Memoria/objetivo.tex
@@ -1,10 +1,10 @@
-\chapter{Objetivos}
+\chapter*{Objetivos}
 A continuación se explicarán de forma general y detallada los objetivos propuestos para este \ac{TFM}.
 
-\section {Objetivo general}
+\section*{Objetivo general}
 El objetivo general del proyecto consiste en el diseño e implementación de una solución que permita la generación de documentos PDF a partir de la información obtenida de los productos de una plataforma de comercio electrónico. Un administrador de un portal de comercio electrónico debe ser capaz de gestionar la disposición de los elementos que componen un producto (fotografía, descripción, título, precio, referencia, etc.) del PDF a generar de una forma ágil y sencilla. Todo este proceso será transparente para un usuario final, que únicamente con presionar un botón obtendrá la información de los productos en un documento PDF.
 
-\section {Objetivos específicos}
+\section*{Objetivos específicos}
 Para alcanzar el objetivo general del proyecto es necesario cubrir los siguientes objetivos específicos:
 
 \begin{itemize}
